<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_family_root"
    android:background="@drawable/bg_login_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnClose"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_pais_ou_responsaveis"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@id/imageLogo"
        app:layout_constraintStart_toEndOf="@id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewTitleRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toEndOf="@id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextRegisterName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nome"
            android:background="@drawable/bg_edittext"
            android:paddingStart="12dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextCPF"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/cpf"
            android:background="@drawable/bg_edittext"
            android:inputType="number"
            android:drawableStart="@drawable/ic_cpf"
            android:drawablePadding="8dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/emaill"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextDriverPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="(00) Telefone"
            android:inputType="phone"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:paddingStart="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- ALTERAÇÃO: campo de Data de Nascimento -->
        <EditText
            android:id="@+id/editTextDataNasc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Data de nascimento (dd/MM/yyyy)"
            android:inputType="number"
            android:maxLength="10"
            android:background="@drawable/bg_edittext"
            android:paddingStart="12dp"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:layout_marginBottom="16dp"/>


        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/registrar"
        android:background="@drawable/bg_button"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/formLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
